--- a/.github/workflows/template-new.yml
+++ b/.github/workflows/template-new.yml
@@ -16,6 +16,11 @@ jobs:
     - name: Checkout Repository #Checkout the Repository into the agent
       uses: actions/checkout@v2
 
+    - name: Login to Azure # Login to Azure with credentials of service principal stored in secrets
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
     # This action is developed as an IP by the MCS team to use variable groups present in the .github/variables folder. For more details: https://github.com/marketplace/actions/set-variable
     - name: Deploy to Azure - Dev # Set Variables based on environment
       uses: ./.github/actions/deploy-azure
@@ -32,6 +37,11 @@ jobs:
     - name: Checkout Repository #Checkout the Repository into the agent
       uses: actions/checkout@v2
 
+    - name: Login to Azure # Login to Azure with credentials of service principal stored in secrets
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
     # This action is developed as an IP by the MCS team to use variable groups present in the .github/variables folder. For more details: https://github.com/marketplace/actions/set-variable
     - name: Deploy to Azure - QA # Set Variables based on environment
       uses: ./.github/actions/deploy-azure
@@ -47,6 +57,11 @@ jobs:
     steps:
     - name: Checkout Repository #Checkout the Repository into the agent
       uses: actions/checkout@v2
+
+    - name: Login to Azure # Login to Azure with credentials of service principal stored in secrets
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     # This action is developed as an IP by the MCS team to use variable groups present in the .github/variables folder. For more details: https://github.com/marketplace/actions/set-variable
     - name: Deploy to Azure - PRD # Set Variables based on environment
